Icons added, timeline removed

--- a/src/main/resources/static/map.html
+++ b/src/main/resources/static/map.html
@@ -21,7 +21,8 @@
       top: 0;
       left: 0;
       right: 0;
-      bottom: 120px;
+      /*bottom: 120px;*/
+      bottom: 0;
     }
 
     #title_container {
@@ -33,15 +34,6 @@
       padding-right: 25px;
       padding-bottom: 10px;
       padding-left: 25px;
-    }
-
-    #timeline {
-      height: 120px;
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 0;
-
     }
 
     body {
@@ -64,13 +56,13 @@
     }
 
     .custom-popup .leaflet-popup-content-wrapper {
-  background:#ffff70;
-  color: #000000;
-  font-size:12px;
-  border-radius: 8px;
-  box-shadow: 5px;
+      background-color: rgba(255, 255, 255, 0.7);
+      color: #2b2b2b;
+      font-size:12px;
+      border-radius: 8px;
+      box-shadow: 5px;
+    }
 
-  }
 .custom-popup .leaflet-popup-content-wrapper a {
     color:rgba(255,255,255,0.1);
   }
@@ -79,7 +71,7 @@
   height:15px;
   }
 .custom-popup .leaflet-popup-tip {
-    background: #ffff64;
+    background-color: rgba(255, 255, 255, 0.7);
     box-shadow: 5px;
     }
 
@@ -94,7 +86,7 @@
   <div id="map"></div>
 
   <!-- Placeholder for timeline -->
-  <div id="timeline"></div>
+  <!--<div id="timeline"></div>-->
 
   <!-- Placeholder for app title -->
   <div id="title_container">
